play/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter&family=VT323&display=swap');

*,
*::before,
*::after {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

:root {
	--main-font: 'Inter', sans-serif;
	--header-font: 'VT323', monospace;
	--main-font-color: #fff;
	--secondary-color: #f7f7f7;
	--secondary-font-color: #515151;
	--orange-color: #ed7124;
}

::selection {
	background: #eeaeca;
}

html {
	font-family: var(--main-font);
	color: var(--main-font-color);
	scroll-behavior: smooth;
	overflow: hidden;
}

body { background-color: #000; }

li, a {
	color: white;
	text-decoration: none;
	font-weight: bold;
}

ul, li {
	list-style: none;
	padding: 0;
}

a:hover, .active_link {
	/* Fallback: Set a background color. */
  	background-color: #e4a3d1;
  
  	/* Create the gradient. */
  	background-image: linear-gradient(45deg, #eeaeca 0%, #94bbe9 100%);
  
  	/* Set the background size and repeat properties. */
  	background-size: 100%;
  	background-repeat: repeat;

  	/* Use the text as a mask for the background. */
  	/* This will show the gradient as a text color rather than element bg. */
  	-webkit-background-clip: text;
  	-webkit-text-fill-color: transparent; 
  	-moz-background-clip: text;
  	-moz-text-fill-color: transparent;
}

.marquee-container {
	width: 100%;
	height: auto;
	overflow: hidden;
	line-height: 30px;
	position: relative;
	background-color: #fff;
}

.marquee {
    width: 1000%;
    overflow: hidden;
 }

.marquee span {
	font-family: var(--header-font);
	font-size: 22px;
	text-transform: uppercase;
    color: black;
	padding: 5px 10px;
    display: inline-block;
}

header {
	display: flex;
	justify-content: flex-end;
	align-items: center;
	padding: 1.5em 2.5em;
	text-transform: uppercase;
}

.logo {
	font-size: 22px;
	position: absolute;
	left: 50px;
	cursor: pointer;
}

.nav_links, .footer_links { list-style: none; }

.nav_links li, .footer_links li {
	font-size: 22px;
	display: inline-block;
	letter-spacing: 1pt;
	padding: 0px 20px;
}

/* PLAY PAGE */

.container {
	width: 80%;
	margin: 10% auto;
	padding: 0 3em;
	display: flex;
	align-items: center;
	justify-content: center;
}

.container h2 {
	font-weight: 200;
	font-size: 28px;
}

.underline, .underline:hover { position: relative; }

.underline:after, .underline:hover:after {
	content: '';
	display: block;
	position: absolute;
	width: 100%;
	height: 2px;
	background-color: #fff;
	left: 0;
	bottom: -3px;
}

/* END OF PLAY PAGE*/

footer {
	position: absolute;
	bottom: 0;
	width: 100%;
	display: flex;
	justify-content: flex-end;
	align-items: center;
	padding: 1.5em 2.5em;
	text-transform: uppercase;
}

footer p {
	font-size: 12px;
	position: absolute;
	left: 50px;
}

@media screen and (max-width: 786px) {
	
	a:focus, div:focus {
    	outline: none; /* no outline - for most browsers */
    	box-shadow: none; /* no box shadow - for some browsers or if you are using Bootstrap */
    	-webkit-tap-highlight-color: transparent;
	}

	.project-title h1 {
		font-size: 20px;
	}

	header { padding: 1em 2em; }

	.logo {
		font-size: 14px;
		left: 30px;
	}

	header li, header a { font-size: 14px; }

	.nav_links { padding-bottom: 10px; }
	.nav_links li, .footer_links li { padding: 0px; }
	.nav_links li:first-child {
		padding: 0 20px;
	}

	.container {
		width: 100%;
		margin: 20% auto;
	}
	.container h2 { font-size: 18px; }
}

